Fixed spacing in button text

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,7 @@ img {
 @media screen and (min-width: 768px) {
   .button-text {
     display: inline;
+    margin-left: 5px;
   }
   .bottom-margin {
     margin-bottom: 0;
